Add README for train and eval

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ model_ts*.txt
 .vscode
 _darcs
 
-# demo 
+# demo
 **/node_modules
 yarn.lock
 package-lock.json
@@ -54,4 +54,4 @@ assets
 output/
 teacher_embed/
 datasets/
-weights
+weights/
